fix: show whitespace instead of "Â" on all browsers

--- a/src/styles/layout/_about-me.scss
+++ b/src/styles/layout/_about-me.scss
@@ -1,7 +1,8 @@
-@import '../helpers/variables/colors';
+@import '../helpers/variables/variables';
 
-#about-me-text {
+.about-me-text {
     text-align: left;
+    text-indent: 20rem;
 }
 
 #me-img {
